refactor(query): decouple kgram execution engine from next query ast (#568)
- Replace legacy IDatatype with DatatypeValue across next.query.impl.kgram
- Introduce native expression evaluators in next.query.impl.sparql.bridge
- Remove legacy bridging adapters (BindingAdapter, DatatypeAdapter, KgramNodeConverter, SparqlAstToExpression, StorageManagerKgramValues)
- Add DatatypeValue and RdfValueOrder contracts to next.data
- Enforce clean module boundaries with NextModuleBoundaryTest